--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,19 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cctread
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+mybatis.config-locations=classpath:config/mybatis-config.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
+#\u5F00\u542F\u9A7C\u5CF0--\u672A\u8D77\u4F5C\u7528
+mapUnderscoreToCamelCase: true
+
+
+
+#\u5B9E\u4F53\u7C7B\u626B\u63CF--\u672A\u8D77\u4F5C\u7528
+type-aliases-package: com.cctread.entity
