--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,6 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #mybatis
-#mybatis.config-location=config/mybatis-config.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
-#\u5F00\u542F\u9A7C\u5CF0
 mybatis.configuration.mapUnderscoreToCamelCase=true
-#\u5B9E\u4F53\u7C7B\u626B\u63CF--\u672A\u8D77\u4F5C\u7528
-#mybatis.type-aliases-package:com.cctread.entity
+mybatis.type-aliases-package=com.cctread.entity
