数据库编码
Signed-off-by: caiteng <caiteng@192.168.1.121>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
 #\u6570\u636E\u6E90
-spring.datasource.url=jdbc:mysql://localhost:3306/cctread
+spring.datasource.url=jdbc:mysql://localhost:3306/cctread?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
