增加mybatis代码自定义生成工具
Signed-off-by: caiteng <caiteng@192.168.1.121>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server\u914D\u7F6E
-server.context-path=/rawler
+server.context-path=/
 server.port=8003
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
