--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,14 @@
             <version>5.1.21</version>
         </dependency>
 
-        <!--爬虫所需要的包-->
+        <!--json解析工具-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
+        <!--爬虫工具-->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
