--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,24 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
+
 #thymeleaf\u6A21\u677F
-spring.thymeleaf.mode=HTML5
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
-spring.thymeleaf.cache=false
+#spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.content-type=text/html
+#spring.thymeleaf.cache=false
+#freemarker\u6A21\u677F
+#\u8BBE\u5B9Aftl\u6587\u4EF6\u8DEF\u5F84
+spring.freemarker.template-loader-path=classpath:/templates
+#\u8BBE\u5B9A\u9759\u6001\u6587\u4EF6\u8DEF\u5F84\uFF0Cjs,css\u7B49
+spring.mvc.static-path-pattern=/static/**
+
 #\u6570\u636E\u6E90
 spring.datasource.url=jdbc:mysql://localhost:3306/cctread?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
