--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,14 @@ spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
 
+#\u9759\u6001\u5E38\u91CF\u914D\u7F6E\u6587\u4EF6
+spring.profiles.active=conf/properties/cos
+
+cos.AppId=1256010222
+cos.SecretId=AKIDBNPH0ZPAE7oKgq6dHk28C757CHBtfmyz
+cos.SecretKey=zoUzOm7XtCbyFPSPFybBev121tZ4MSN6
+cos.region_name=ap-beijing
+
 #thymeleaf\u6A21\u677F
 #spring.thymeleaf.mode=HTML5
 #spring.thymeleaf.encoding=UTF-8
