--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,9 +27,14 @@ spring.freemarker.template-loader-path=classpath:/templates
 spring.mvc.static-path-pattern=/static/**
 
 #\u6570\u636E\u6E90
-spring.datasource.url=jdbc:mysql://localhost:3306/cctread?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/cctread?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://167.160.188.2:3306/rfudqfgh_cct?useUnicode=true&characterEncoding=GBK&useSSL=false
+spring.datasource.username=rfudqfgh_root
+spring.datasource.password=root2018CCT
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #mybatis
