增加爬虫搜索主页，更换数据库
Signed-off-by: caiteng <caiteng@192.168.1.121>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,12 @@
 server.context-path=/
 server.port=8003
 server.tomcat.uri-encoding=UTF-8
-spring.http.encoding.charset=UTF-8
+spring.http.encoding.charset=GBK
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
 
-#\u9759\u6001\u5E38\u91CF\u914D\u7F6E\u6587\u4EF6
-spring.profiles.active=conf/properties/cos
-
+#\u9759\u6001\u5E38\u91CF\u914D\u7F6E
 cos.AppId=1256010222
 cos.SecretId=AKIDBNPH0ZPAE7oKgq6dHk28C757CHBtfmyz
 cos.SecretKey=zoUzOm7XtCbyFPSPFybBev121tZ4MSN6
@@ -32,10 +30,16 @@ spring.mvc.static-path-pattern=/static/**
 #spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://167.160.188.2:3306/rfudqfgh_cct?useUnicode=true&characterEncoding=GBK&useSSL=false
-spring.datasource.username=rfudqfgh_root
-spring.datasource.password=root2018CCT
+#spring.datasource.url=jdbc:mysql://167.160.188.2:3306/rfudqfgh_cct?useUnicode=true&characterEncoding=GBK&useSSL=false
+#spring.datasource.username=rfudqfgh_root
+#spring.datasource.password=root2018CCT
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://bdm24682369.my3w.com:3306/bdm24682369_db?useUnicode=true&characterEncoding=GBK&useSSL=false
+spring.datasource.username=bdm24682369
+spring.datasource.password=cctRead2018
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
